syntax = "proto3";

package grpc.service;

option java_package = "com.grpc.service";
option java_multiple_files = true;

import "google/protobuf/empty.proto";

message FindUserByIdRequest {

  uint64 id = 1;

}

message UserResponse {

  uint64 id = 1;

  string name = 2;

  Role role = 3;

}

message AllUsersResponse{

  repeated UserResponse users = 1;

}

message UserRequest{

  int64 origin = 1;

  int64 bound = 2;

}

message RandomNumber{

  int64 number = 1;

}

message SumNumbersRequest{

  uint64 number = 1;

}

message SumNumbersResponse {

  uint64 result = 1;

}


enum Role {

  DEFAULT = 0;

  USER = 1;

  ADMIN = 2;

}

service UserService {

  //unary
  rpc GetUserById (FindUserByIdRequest) returns (UserResponse);
  rpc GetAllUsers (google.protobuf.Empty) returns (AllUsersResponse);

  //server-streaming
  rpc Withdraw(UserRequest) returns (stream RandomNumber);

  //client-streaming
  rpc Sum(stream SumNumbersRequest) returns(SumNumbersResponse);

}


